k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edutech
  labels:
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/part-of: edutech-platform
